[gd_scene load_steps=13 format=1]

[ext_resource path="res://CommonScenes/OptionsMenu/OptionsMenuScreen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/OrbitronMedium30.fnt" type="BitmapFont" id=2]
[ext_resource path="res://CommonScenes/OptionsMenu/Options Scripts/FullscreenOption.gd" type="Script" id=3]
[ext_resource path="res://CommonScenes/OptionsMenu/png/arrow.png" type="Texture" id=4]
[ext_resource path="res://CommonScenes/Button.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="Animation" id=6]

resource/name = "disabled"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("RightArrow:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0.1 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightArrow:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.1 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LeftArrow:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.1 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LeftArrow:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0.1 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]

resource/name = "enabled"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("LeftArrow:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftArrow:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RightArrow:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RightArrow:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="OptionsMenuScreen" type="CanvasLayer"]

process/pause_mode = 2
layer = 4
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="ColorFrame1" type="ColorFrame" parent="."]

visibility/opacity = 0.7
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -3.0
margin/right = 1920.0
margin/bottom = 1080.0
color = Color( 0.247059, 0.054902, 0.156863, 1 )

[node name="ColorFrame" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 352.0
margin/right = 1920.0
margin/bottom = 967.0
color = Color( 1, 1, 1, 1 )

[node name="ColorFrame2" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 362.0
margin/right = 1920.0
margin/bottom = 957.0
color = Color( 0.247059, 0.054902, 0.156863, 1 )

[node name="MenuContainer" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 705.0
margin/top = 405.0
margin/right = 1214.0
margin/bottom = 896.0

[node name="FullscreenOption" type="Button" parent="MenuContainer"]

editor/display_folded = true
anchor/right = 1
rect/scale = Vector2( 1.5, 1.5 )
focus_neighbour/top = NodePath("../OptionsExit")
focus_neighbour/bottom = NodePath("../OptionsExit")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 43.0
margin/right = 171.0
margin/bottom = 86.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.184521, 0.17308, 0.222656, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.742188, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Fullscreen: --"
flat = false
script/script = ExtResource( 3 )

[node name="RightArrow" type="TextureButton" parent="MenuContainer/FullscreenOption"]

visibility/opacity = 0.13153
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 338.0
margin/top = 6.0
margin/right = 356.0
margin/bottom = 41.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="LeftArrow" type="TextureButton" parent="MenuContainer/FullscreenOption"]

visibility/opacity = 0.13153
rect/scale = Vector2( -1, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 6.0
margin/right = 18.0
margin/bottom = 41.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="ArrowAnimator" type="AnimationPlayer" parent="MenuContainer/FullscreenOption"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/disabled = SubResource( 6 )
anims/enabled = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="OptionsExit" type="Button" parent="MenuContainer"]

rect/scale = Vector2( 1.5, 1.5 )
focus_neighbour/top = NodePath("../FullscreenOption")
focus_neighbour/bottom = NodePath("../StoryMode")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 389.0
margin/right = 338.0
margin/bottom = 432.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.184521, 0.17308, 0.222656, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.742188, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit Options"
flat = false
script/script = ExtResource( 5 )

[connection signal="pressed" from="MenuContainer/FullscreenOption/RightArrow" to="MenuContainer/FullscreenOption" method="change_screen_mode"]

[connection signal="pressed" from="MenuContainer/FullscreenOption/LeftArrow" to="MenuContainer/FullscreenOption" method="change_screen_mode"]

[connection signal="pressed" from="MenuContainer/OptionsExit" to="." method="_on_options_exit_pressed"]


